# tinydtls-rs

./: .gitlab-ci.yml  .gitmodules  Cargo.toml  LICENSE  README.md
tinydtls-sys/: Cargo.toml  README.md  build.rs
tinydtls-sys/src/: lib.rs  wrapper.h
