# Copyright (c) 2021 The NAMIB Project Developers, all rights reserved.
# See the README as well as the LICENSE file for more information.
# SPDX-License-Identifier: EPL-1.0 OR BSD-3-CLAUSE
[package]
name = "tinydtls-sys"
description = "Raw bindings to the TinyDTLS library."
version = "0.1.2+tinydtls-c84e36f"
edition = "2021"
links = "tinydtls"
# For tinydtls, both licenses can be applied, see https://www.eclipse.org/legal/eplfaq.php#DUALLIC
# BSD-3-CLAUSE is equivalent to the EDL v1.0, see https://www.eclipse.org/org/documents/edl-v10.php
# First bracket is the license for TinyDTLS, the remainder is for code included with tinydtls.
license = "(EPL-1.0 OR BSD-3-Clause) AND BSD-1-Clause AND BSD-3-Clause AND MIT"
readme = "README.md"
homepage = "https://github.com/namib-project/tinydtls-rs"
repository = "https://github.com/namib-project/tinydtls-rs"
authors = ["Hugo Hakim Damer <hdamer@uni-bremen.de>"]
categories = ["external-ffi-bindings", "network-programming", "cryptography", "embedded"]
keywords = ["tinydtls", "sys", "dtls", "crypto"]
exclude = ['/src/tinydtls/share/', '/src/tinydtls/include/', '/src/tinydtls/configure.prev']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["vendored", "static", "ecc", "psk"]
# Use a vendored version of tinydtls
vendored = ["static"]
# Attempt static linking to tinydtls
static = []

# Enable ECC functionality in vendored library
ecc = []
# Enable PSK functionality in vendored library
psk = []

[dependencies]
libc = "^0.2.112"

[dev-dependencies]
lazy_static = "^1.4"

[build-dependencies]
bindgen = "^0.59.2"
autotools = "^0.2.3"
fs_extra = "^1.2"
